[package]
name = "code"
version = "0.1.0"
authors = ["Kalocsai Richárd <kalocsai.richard.r@gmail.com>"]
edition = "2018"
resolver = "2"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
#getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }


[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = {version = "1" , features = ["backtrace"]}
log = "0.4.*"
esp-idf-sys = { version = "0.30.6", features = ["binstart"] }
esp-idf-svc = "0.37.3"
esp-idf-hal = "0.33.2"
esp32 = "0.11.0"
embedded-svc = "0.17.4"
embedded-hal = "0.2.7"
smol = "1.2"
pwm-pca9685 = "0.3.1"

[build-dependencies]
embuild = "0.28"
anyhow = "1"
